--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,10 @@ DerivedData
 *.xcuserstate
 **/.xcode.env.local
 
+
 # Android/IntelliJ
 #
+.bundle/
 build/
 .idea
 .gradle
@@ -73,3 +75,8 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+
+# Android
+# Local configuration file
+android/app/google-services.json
